added list of rss feeds, implemented a simple script for downloading feeds and saving them into a pickle file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Project for media analysis"
 authors = ["KyrBl"]
 packages = [
   { include = "src" },
+  { include = "utils", from = "src" }
 ]
 
 [tool.poetry.dependencies]
