--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-feedparser = "^6.0.10"
+requests = "^2.29.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "22.3.0"
