implemented uploading data to elastic, changed the way how json files are saved

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.9"
 requests = "^2.29.0"
+elasticsearch = "^8.7.0"
+beautifulsoup4 = "^4.12.2"
+lxml = "^4.9.2"
 
 [build-system]
 requires = ["poetry-core=1.4.0"]
