--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ requests = "^2.29.0"
 elasticsearch = "^8.7.0"
 beautifulsoup4 = "^4.12.2"
 lxml = "^4.9.2"
+flask = "^2.3.2"
 
 [build-system]
 requires = ["poetry-core=1.4.0"]
