--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ elasticsearch = "^8.7.0"
 beautifulsoup4 = "^4.12.2"
 lxml = "^4.9.2"
 flask = "^2.3.2"
+pytz = "^2023.3"
 
 [build-system]
 requires = ["poetry-core=1.4.0"]
